--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,8 @@
       JavaScript tasks..</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button>LIKE</button>
-    <button mat-raised-button>SHARE</button>
+    <button mat-raised-button><mat-icon>share</mat-icon></button>
+    <button mat-raised-button><mat-icon>thumb_up_alt</mat-icon></button>
   </mat-card-actions>
 </mat-card>
 <mat-card>
@@ -40,8 +40,8 @@
       configuration leads to the TypeScript configuration, which in turn leads to tslint.json</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button>LIKE</button>
-    <button mat-raised-button>SHARE</button>
+    <button mat-raised-button><mat-icon>share</mat-icon></button>
+    <button mat-raised-button><mat-icon>thumb_up_alt</mat-icon></button>
   </mat-card-actions>
 </mat-card>
 <mat-card>
@@ -59,8 +59,8 @@
       npm run build</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button>LIKE</button>
-    <button mat-raised-button>SHARE</button>
+    <button mat-raised-button><mat-icon>share</mat-icon></button>
+    <button mat-raised-button><mat-icon>thumb_up_alt</mat-icon></button>
   </mat-card-actions>
 </mat-card>
 <mat-card>
@@ -79,8 +79,8 @@
       choice. Show four Material Design cards with unique content on each card.</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button>LIKE</button>
-    <button mat-raised-button>SHARE</button>
+    <button mat-raised-button><mat-icon>share</mat-icon></button>
+    <button mat-raised-button><mat-icon>thumb_up_alt</mat-icon></button>
   </mat-card-actions>
 </mat-card>
 <router-outlet></router-outlet>
